Preparing for release: switch to mvn portal for staging